Add Configurable Volume Window for Momentum Analysis

--- a/binance_momentum_monitor/.env.example
+++ b/binance_momentum_monitor/.env.example
@@ -8,6 +8,7 @@ DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/YOUR_WEBHOOK_URL
 # Signal Detection
 TIMEFRAME=15m
 LOOKBACK_PERIODS=8
+VOLUME_WINDOW_HOURS=8
 VOLUME_ZSCORE_THRESHOLD=2.0
 PRICE_CHANGE_THRESHOLD=0.05
 
