Create Core Metrics Infrastructure

--- a/binance_momentum_monitor/.env.example
+++ b/binance_momentum_monitor/.env.example
@@ -31,5 +31,9 @@ REST_RATE_LIMIT=1200
 METRICS_INTERVAL=60
 LOG_LEVEL=INFO
 
+# API Instrumentation (Phase 1 complete)
+API_METRICS_BUFFER_SIZE=1000
+API_LOG_ALL_CALLS=false
+
 # Optional: Path to YAML config file (overrides env vars)
 # CONFIG_PATH=/path/to/config.yaml
