--- a/binance_momentum_monitor/config/default.yaml
+++ b/binance_momentum_monitor/config/default.yaml
@@ -14,7 +14,7 @@ signals:
   timeframe: "15m"
   lookback_periods: 8
   volume_window_hours: 8
-  volume_zscore_threshold: 2.0
+  volume_spike_threshold: 150.0
   price_change_threshold: 0.05
   use_atr_normalization: true
 
@@ -24,4 +24,4 @@ alerts:
 
 monitoring:
   metrics_interval: 60
-  log_level: "INFO"
+  log_level: "DEBUG"
