update/fix config handling

--- a/binance_momentum_monitor/config/default.yaml
+++ b/binance_momentum_monitor/config/default.yaml
@@ -1,27 +1,27 @@
 universe:
-  cache_ttl: 3600
-  min_hourly_volume: 1000
+  cache_ttl: ${CACHE_TTL:-3600}
+  min_hourly_volume: ${MIN_HOURLY_VOLUME:-1000}
 
 data:
   websocket:
-    max_streams_per_connection: 1024
-    max_messages_per_second: 10
-    reconnect_delay: 5
+    max_streams_per_connection: ${MAX_STREAMS_PER_CONNECTION:-1024}
+    max_messages_per_second: ${MAX_MESSAGES_PER_SECOND:-10}
+    reconnect_delay: ${RECONNECT_DELAY:-5}
   rest:
-    rate_limit: 1200
+    rate_limit: ${RATE_LIMIT:-1200}
 
 signals:
-  timeframe: "15m"
-  lookback_periods: 8
-  volume_window_hours: 8
-  volume_spike_threshold: 150.0
-  price_change_threshold: 0.05
-  use_atr_normalization: true
+  timeframe: "${TIMEFRAME:-15m}"
+  lookback_periods: ${LOOKBACK_PERIODS:-8}
+  volume_window_hours: ${VOLUME_WINDOW_HOURS:-8}
+  volume_spike_threshold: ${VOLUME_SPIKE_THRESHOLD:-150.0}
+  price_change_threshold: ${PRICE_CHANGE_THRESHOLD:-0.05}
+  use_atr_normalization: ${USE_ATR_NORMALIZATION:-true}
 
 alerts:
-  cooldown_minutes: 30
+  cooldown_minutes: ${COOLDOWN_MINUTES:-30}
   discord_webhook_url: "${DISCORD_WEBHOOK_URL}"
 
 monitoring:
-  metrics_interval: 60
-  log_level: "DEBUG"
+  metrics_interval: ${METRICS_INTERVAL:-60}
+  log_level: "${LOG_LEVEL:-DEBUG}"
